--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 	<button id="back" onclick="goBack()">Back</button>
 	
-	<h1 id="header"></h1>
-	<p id="question"></p>
+	<h1 id="header">StemWijzer</h1>
+	<p id="question">Snel beginnen? druk start</p>
 
-	<button id="agree">Eens</button>
-	<button id="disagree">Oneens</button>
-	<button id="skip" onclick="skipQuestion()">sla over</button>
+	<button id="agree" onclick="setAgree()">Eens</button>
+	<button id="disagree" onclick="disAgree()">Oneens</button>
+	<button id="skip" onclick="start()">Start</button>
 
 </article>
 <script src="js/data.js" type="text/javascript" ></script>
