--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<p id="question">Snel beginnen? druk start</p>
 
 	<button id="agree" onclick="setAgree()">Eens</button>
-	<button id="disagree" onclick="disAgree()">Oneens</button>
+	<button id="disagree" onclick="setDisAgree()">Oneens</button>
 	<button id="skip" onclick="start()">Start</button>
 
 </article>
