--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 
 <article>
 
-	<button id="back" onclick="goBack()">Back</button>
-	
 	<h1 id="header">StemWijzer</h1>
-	<p id="question">Snel beginnen? druk start</p>
+	<p id="question">Door op start te klikken begint u de stemwijzer</p>
 
+	<button id="start" onclick="begin()">Start</button>
 	<button id="agree" onclick="setAgree()">Eens</button>
 	<button id="disagree" onclick="setDisAgree()">Oneens</button>
-	<button id="skip" onclick="start()">Start</button>
+	<button id="skip" onclick="skipQuestion()">Sla over</button>
+	<br>
+	<button id="back" onclick="goBack()">Terug</button>
 
 </article>
 <script src="js/data.js" type="text/javascript" ></script>
 <script src="js/question.js" type="text/javascript" ></script>
+<script src="js/functions.js" type="text/javascript" ></script>
+
 </body>
 </html>
