--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Stemwijzer</title>
 	<meta charset="utf-8">
-	<!-- Style nog aanmaken -->
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
@@ -16,14 +15,32 @@
 	<button id="start" onclick="begin()">Start</button>
 	<button id="agree" onclick="setAgree()">Eens</button>
 	<button id="disagree" onclick="setDisAgree()">Oneens</button>
+	<button id="non" onclick="setNon()">Geen</button>
 	<button id="skip" onclick="skipQuestion()">Sla over</button>
 	<br>
 	<button id="back" onclick="goBack()">Terug</button>
+	<button id="result" onclick="getResult()">Resultaat</button>
+
+	<hr>
+
+	<table>
+		<tr>
+			<th>Vraag</th>
+			<th>Onderwerp</th>
+			<th>Stem</th>
+		</tr>
+		<tr>
+			<td id="result_header"></td>
+			<td id="result_question"></td>
+			<td id="result_vote"></td>
+		</tr>
+	</table>
 
 </article>
+
+<!-- link to javascript -->
 <script src="js/data.js" type="text/javascript" ></script>
 <script src="js/question.js" type="text/javascript" ></script>
 <script src="js/functions.js" type="text/javascript" ></script>
-
 </body>
 </html>
