vergelijken met de stemmen van de partijen werkt

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 	<table>
 		<tr>
-			<th>Vraag</th>
-			<th>Onderwerp</th>
+			<th>Partijen</th>
 			<th>Stem</th>
+			<th>Toelichting</th>
 		</tr>
 		<tr>
 			<td id="result_header"></td>
