sorteren van de totale scoren van de partijen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
+<nav>
+	<button onclick="sortScore()">Sorteren</button>
+</nav>
 
 <article>
 	<h1 id="header">StemWijzer</h1>
