--- a/index.html
+++ b/index.html
@@ -7,34 +7,35 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
-<nav>
-	<button onclick="sortScore()">Sorteren</button>
-</nav>
+<main>
 
-<article>
-	<h1 id="header">StemWijzer</h1>
-	<p id="question">Door op start te klikken begint u de stemwijzer</p>
+	<article>
+		<h1 id="header"><center>StemWijzer</center></h1>
+		<p id="question"><center>Door op start te klikken begint u de stemwijzer</center></p>
 
-	<button id="start" onclick="begin()">Start</button>
-	<button id="agree" onclick="setAgree()">Eens</button>
-	<button id="disagree" onclick="setDisAgree()">Oneens</button>
-	<button id="non" onclick="setNon()">Geen van beide</button>
-	<button id="skip" onclick="skipQuestion()">Sla over</button>
-	<br>
-	<button id="back" onclick="goBack()"><i class="fas fa-chevron-circle-left" style="font-size:30px;"></i></button>
-	<button id="result" onclick="getResult()">Resultaat</button>
+		<button id="start" onclick="begin()">Start</button>
+		<button id="agree" onclick="setAgree()">Eens</button>
+		<button id="disagree" onclick="setDisAgree()">Oneens</button>
+		<button id="non" onclick="setNon()">Geen van beide</button>
+		<button id="skip" onclick="skipQuestion()">Sla over</button>
+		<br>
+		<button id="back" onclick="goBack()"><i class="fas fa-chevron-circle-left" style="font-size:30px;"></i></button>
+		<button id="result" onclick="getResult()">Resultaat</button>	
+	</article>
 
-	<hr>
+	<aside id="aside">
 
-	<center><b>Resultaten:</b></center>
-	<table id="table">
-		<tr>
-			<th>Partijen</th>
-			<th>Stem</th>
-		</tr>
-	</table>
+		<table id="table">
+			<tr>
+				<th>Partijen</th>
+				<th>Stem</th>
+			</tr>
+		</table>
+		
+	</aside>
 
-</article>
+</main>
+
 
 <!-- link to javascript -->
 <script src="js/data.js" type="text/javascript" ></script>
