--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
-<main>
-
 	<article>
 		<h1 id="header"><center>StemWijzer</center></h1>
-		<p id="question"><center>Door op start te klikken begint u de stemwijzer</center></p>
+		<p id="question"></p>
 
 		<button id="start" onclick="begin()">Start</button>
 		<button id="agree" onclick="setAgree()">Eens</button>
@@ -20,22 +18,30 @@
 		<button id="skip" onclick="skipQuestion()">Sla over</button>
 		<br>
 		<button id="back" onclick="goBack()"><i class="fas fa-chevron-circle-left" style="font-size:30px;"></i></button>
-		<button id="result" onclick="getResult()">Resultaat</button>	
+		<button id="result" onclick="getResult()">Alle partijen</button>
+		<button id="resultButton" onclick="filterParties()">Gemachte partijen</button>	
 	</article>
 
+<main>
 	<aside id="aside">
-
+	<h1>Alle partijen</h1>
 		<table id="table">
 			<tr>
 				<th>Partijen</th>
-				<th>Stem</th>
+				<th>Punten</th>
 			</tr>
 		</table>
-		
 	</aside>
-
+	<aside id="aside1">
+	<h1>Alleen partijen die een match hebben</h1>
+		<table id="table2">
+			<tr>
+				<th>Partijen</th>
+				<th>Punten</th>
+			</tr>
+		</table>		
+	</aside>
 </main>
-
 
 <!-- link to javascript -->
 <script src="js/data.js" type="text/javascript" ></script>
