--- a/index.html
+++ b/index.html
@@ -21,27 +21,11 @@
 		<button id="result" onclick="getResult()">Alle partijen</button>
 		<button id="resultButton" onclick="filterParties()">Gemachte partijen</button>	
 	</article>
-
-<main>
 	<aside id="aside">
-	<h1>Alle partijen</h1>
-		<table id="table">
-			<tr>
-				<th>Partijen</th>
-				<th>Punten</th>
-			</tr>
-		</table>
+		<h3 id="name"></h3>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<p id="score"></p>
 	</aside>
-	<aside id="aside1">
-	<h1>Alleen partijen die een match hebben</h1>
-		<table id="table2">
-			<tr>
-				<th>Partijen</th>
-				<th>Punten</th>
-			</tr>
-		</table>		
-	</aside>
-</main>
 
 <!-- link to javascript -->
 <script src="js/data.js" type="text/javascript" ></script>
