--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			Als dat gebeurd, wordt de vraag met de aangegeven waarde geteld.
 		</p>
 
-		<label id="send">Waarde in punten (Kan wijzigen):</label>
+		<label id="send">Waarde in punten <b>(Kan wijzigen)</b>:</label>
 		<br>
-		<input type="number" id="number" step="0.1" min="1" max="10" value="1">
+		<input type="number" id="number" step="1" min="1" max="10" value="1">
 
 		<br>
 		<br>
